body shifting issue

--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue",
     Arial;
   overscroll-behavior: none;
+  overflow: hidden;
 }
 
 #canvas {
